# rust-template

./: README.md
crate/: Cargo.toml  cargo-generate.toml
crate/src/: lib.rs
repo/: Cargo.toml  README.md  cargo-generate.toml  post-script.rhai  rust-toolchain.toml
