[package]
name = "{{project-name}}"
description = "{{project-description}}"
version = "0.1.0"
authors = ["{{authors}}"]
repository = "https://github.com/{{gh-username}}/{{project-name}}"
edition = "2021"
license = "MIT"
# Keep in sync w/ rust-toolchain.toml
{%- if crate_type == "lib" %}# TODO downgrade MSRV{% endif %}
rust-version = "1.80.0"

[dependencies]

[workspace.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\] - ReleaseDate", replace = "## [Unreleased] - ReleaseDate\n\n## [{{version}}] - {{date}}" },
]

{%- if dist %}

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.21.1"
ci = ["github"]
installers = ["shell", "powershell", "homebrew"]
tap = "{{gh-username}}/homebrew-tap"
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
]
publish-jobs = ["homebrew"]
pr-run-mode = "plan"
install-updater = false
{%- endif %}
